@@ -91,6 +91,10 @@ public class LiteSearchControllerTest extends LiteJerseyTest {
         assertEquals(ClientResponse.Status.OK.getStatusCode(),
                 response.getStatus());
         String message = response.getEntity(String.class);
+        assertEquals(
+            "Wes8Bd4h1OypPqbWF5njeQ==",
+            response.getMetadata().getFirst("X-Index-Revision")
+            );
         assertEquals(message, config.getApiWelcomeMessage());
     }
 
